More flexible weights saving during training

--- a/inference.ipynb
+++ b/inference.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "import torch\n",
     "import librosa\n",
@@ -18,8 +27,8 @@
     "from data.dataset import MultitrackAudioDataset\n",
     "from data.dataset_utils import load_tracks, load_tracks_musdb18\n",
     "from data.medleydb_split import weathervane_music, musdb18_not_in_medleydb\n",
-    "from models.model_scalar_v2 import MixingModelScalar2d\n",
-    "from models.model_scalar_v2_2s import MixingModelScalar2d2s\n",
+    "from models.model_scalar_1s import MixingModelScalar1s\n",
+    "from models.model_scalar_2s import MixingModelScalar2s\n",
     "from inference_utils import mix_song_smooth\n",
     "from evaluation import LoudnessEvaluator\n",
     "\n",
