--- a/training_ignite.ipynb
+++ b/training_ignite.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import librosa\n",
@@ -24,8 +15,9 @@
     "import torch.nn.functional as F\n",
     "import numpy as np\n",
     "import soundfile as sf\n",
+    "from datetime import datetime\n",
     "from torch.utils.data import DataLoader\n",
-    "from models.model_scalar_v2 import MixingModelScalar2d\n",
+    "from models.model_scalar_1s import MixingModelScalar1s\n",
     "from data.dataset import MultitrackAudioDataset\n",
     "from data.dataset_utils import split_songlist\n",
     "from data.medleydb_split import weathervane_music, musdb18_not_in_medleydb\n",
@@ -40,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -60,13 +52,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "base_path = '/media/apelykh/bottomless-pit/datasets/mixing/MedleyDB/Audio'\n",
-    "weights_dir = './saved_models'\n",
-    "chunk_length = 1"
+    "chunk_length = 1\n",
+    "\n",
+    "model_type = '4masks'     # 4masks / 3masks\n",
+    "features_norm = 'unnorm'  # unnorm / norm\n",
+    "datasets = 'medleydb'     # medleydb / musedb / medleydb+musedb\n",
+    "date_time = datetime.now().strftime(\"%d-%m-%Y-%H:%M\")\n",
+    "\n",
+    "dirname = '{}_training_{}_{}_{}s_{}'.format(date_time, model_type, features_norm, chunk_length, datasets)\n",
+    "weights_dir = os.path.join('./saved_models', dirname)"
    ]
   },
   {
@@ -109,15 +108,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train: 1 tracks, 289 chunks\n",
-      "Val: 1 tracks, 243 chunks\n"
+      "Train: 1 tracks, 243 chunks\n",
+      "Val: 1 tracks, 317 chunks\n"
      ]
     }
    ],
@@ -146,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -232,7 +231,7 @@
     }
    ],
    "source": [
-    "model = MixingModelScalar2d().to(device)\n",
+    "model = MixingModelScalar1s().to(device)\n",
     "\n",
     "num_trainable_param = sum(p.numel() for p in model.parameters() if p.requires_grad)\n",
     "print('{} trainable parameters'.format(num_trainable_param))"
@@ -261,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -325,16 +324,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<ignite.engine.events.RemovableEventHandle at 0x7f069066e280>"
+       "<ignite.engine.events.RemovableEventHandle at 0x7fbab21aa700>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -356,7 +355,7 @@
     "    save_as_state_dict=True,\n",
     "    require_empty=False\n",
     ")\n",
-    "model_name = 'scalar2d_{}s'.format(chunk_length)\n",
+    "model_name = 'scalar{}s'.format(chunk_length)\n",
     "val_evaluator.add_event_handler(Events.EPOCH_COMPLETED, checkpointer, {model_name: model})\n",
     "\n",
     "\n",
@@ -370,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
